feat : 구글 로그인 설정

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -5,6 +5,13 @@
         <div class="row">
             <div class="col-md-6">
                 <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
+                {{#userName}} <!-- userName 값이 있을 때 실행. 머스테치에는 if문 없음 -->
+                    Logged in as: <span id="user">{{userName}}</span>
+                    <a href="/logout" class="btn btn-info active" role="button">Logout</a> <!-- 스프링 시큐리티의 디폴트 로그아웃 URL 로, 별도로 저 URL 의 컨트롤러 만들필요 없음 -->
+                {{/userName}}
+                {{^userName}} <!-- userName 이 없으면 로그인 버튼 노출 -->
+                        <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a> <!-- 스프링 시큐리티의 디폴트 구글로그인 URL -->
+                {{/userName}}
             </div>
         </div>
         <br>
